Update to 26.1.2 (#45)
* Update to 1.21.11

* Check wrapper, gradlew executable

* More clickables

* Mojang mappings

Optimize imports

Fix permission level deprecations

Fix a billion warnings

Fix breaking visibility

Fix AWs

Manual mojmapping

Only group devs for publishing

Bump version

Add release instructions to README.md

Revert "publishing yay"

Remove leftover releasing steps

* Buildscript changes

Fapi remap

Fix most remap errors

Fix save migration

* Fixed translation errors

* Warning cleanup

---------

Co-authored-by: ellieisjelly <ellie@ellieis.me>